--- a/tmux.conf
+++ b/tmux.conf
@@ -26,9 +26,10 @@ setw -g mode-keys vi
 #################################### PLUGINS SET UP ###################################
 
 mode_separator=""
+music_separator=""
 set -g @mode_indicator_empty_prompt " TMUX #[default]#[fg=cyan]$mode_separator"
 set -g @mode_indicator_empty_mode_style fg=black,bg=cyan,bold
-set -g @mode_indicator_prefix_prompt " TMUX #[default]#[fg=blue]$mode_separator"
+set -g @mode_indicator_prefix_prompt " 🦄🐙 #[default]#[fg=blue]$mode_separator"
 set -g @mode_indicator_prefix_mode_style fg=black,bg=blue,bold
 set -g @mode_indicator_copy_prompt " COPY #[default]#[fg=green]$mode_separator"
 set -g @mode_indicator_copy_mode_style fg=blue,bg=green,bold
@@ -55,6 +56,8 @@ set -g @pomodoro_pause "  #[fg=yellow] "
 set -g @pomodoro_prompt_break "  #[fg=green] ?"
 set -g @pomodoro_prompt_pomodoro "  #[fg=red] ?"
 set -g @pomodoro_interval_display "#[fg=gray]|#[fg=italics]%s"
+set -g @pomodoro_sound 'on'
+set -g @pomodoro_notifications 'on'
 
 # tmux-battery
 set -g @batt_icon_charge_tier8 ""
@@ -74,6 +77,18 @@ set -g @batt_icon_status_unknown " "
 
 set -g @batt_remain_short true
 
+# Music player
+set -g @now-playing-playing-icon "▶"
+set -g @now-playing-paused-icon ""
+set -g @now-playing-auto-interval "yes"
+set -g @now-playing-shared-session-command "nvim"
+set -g @now-playing-scrollable-threshold "10"
+set -g @now-playing-status-format "#[fg=magenta] $music_separator#[bg=magenta,fg=black]{icon} #[fg=black#,bg=magenta] {scrollable}"
+set -g @now-playing-play-pause-key "."
+
+sc_music="#{now_playing}"
+wg_music="#{?#{>=:#{p-4:window_width}, 120},#{?$sc_music,$sc_music ,},}"
+
 #################################### THEME ###################################
 
 #+--- tmux-prefix-highlight ---+
@@ -85,19 +100,21 @@ set -g @prefix_highlight_output_suffix ""
 set -g @prefix_highlight_copy_mode_attr "fg=brightcyan,bg=black,bold"
 # Dark theme
 #+--- Bars ---+
-set -g status-left "#{tmux_mode_indicator} #{online_status}  #[fg=blue]%R#{pomodoro_status}"
-set -g status-right "#[fg=cyan]#{battery_icon_charge}  #{battery_percentage}#{battery_icon_status}#{battery_remain}  CPU:#{cpu_percentage} "
-setw -g window-status-format "#[fg=blue,italics] #I:#[noitalics]#W"
-setw -g window-status-current-format "#[fg=cyan,italics]#I: #[fg=cyan,noitalics,bold]#W"
+set -g status-left "#{tmux_mode_indicator} #{online_status} #{cpu_percentage} #{pomodoro_status}"
+set -g status-right "#[fg=cyan]#{battery_icon_charge}  #{battery_percentage}#{battery_icon_status}#{battery_remain} #[fg=blue]$wg_music"
+setw -g window-status-format "#[fg=blue,italics]#I:#[noitalics]#W"
+setw -g window-status-current-format "#[fg=magenta,italics]#I:#[fg=magenta,noitalics,bold]#W"
 
 #################################### KEYBINDS ###################################
 
 # reload configuration
-bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
+bind R source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
 unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
+
+bind-key r command-prompt -I "#W" "rename-window '%%'"
 
 # split current window horizontally
 bind - split-window -v -c "#{pane_current_path}"
@@ -146,6 +163,7 @@ set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'olimorris/tmux-pomodoro-plus'
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'    # Display current tmux mode
 set -g @plugin 'tmux-plugins/tmux-online-status'    # Are we connected to the internet?!
+set -g @plugin 'spywhere/tmux-now-playing'
 
 
 run '~/.tmux/plugins/tpm/tpm'
