--- a/kitty/base.conf
+++ b/kitty/base.conf
@@ -44,7 +44,7 @@ symbol_map U+e0a0-U+e0a2,U+e0b0-U+e0b3 Symbols Nerd Font
 symbol_map U+e0a3-U+e0a3,U+e0b4-U+e0c8,U+e0cc-U+e0d2,U+e0d4-U+e0d4 Symbols Nerd Font
 
 # "Nerd Fonts - Symbols original"
-symbol_map U+e5fa-U+e62b Symbols Nerd Font
+symbol_map U+e5fa-U+e6ac Symbols Nerd Font
 
 # "Nerd Fonts - Devicons"
 symbol_map U+e700-U+e7c5 Symbols Nerd Font
@@ -65,7 +65,8 @@ symbol_map U+F300-U+F313 Symbols Nerd Font
 symbol_map U+23fb-U+23fe,U+2b58-U+2b58 Symbols Nerd Font
 
 #  "Nerd Fonts - Material Design Icons"
-symbol_map U+f500-U+fd46 Symbols Nerd Font
+# symbol_map U+f500-U+fd46 Symbols Nerd Font
+symbol_map U+F0001-U+F1AF0 Symbols Nerd Font
 
 # "Nerd Fonts - Weather Icons"
 symbol_map U+e300-U+e3eb Symbols Nerd Font
