--- a/kitty/base.conf
+++ b/kitty/base.conf
@@ -5,15 +5,15 @@
 # italic_font      Dank Mono Italic
 # bold_font        Dank Mono Bold
 
-font_family      MonoLisa Regular
-italic_font      MonoLisa Regular Italic
-bold_italic_font MonoLisa Bold Italic
-bold_font        MonoLisa Bold
+# font_family      MonoLisa Regular
+# italic_font      MonoLisa Regular Italic
+# bold_italic_font MonoLisa Bold Italic
+# bold_font        MonoLisa Bold
 
-#font_family      Berkeley Mono Regular
-#italic_font      Berkeley Mono Italic
-#bold_italic_font Berkeley Mono Bold Italic
-#bold_font        Berkeley Mono Bold
+font_family      Berkeley Mono Regular
+italic_font      Berkeley Mono Italic
+bold_italic_font Berkeley Mono Bold Italic
+bold_font        Berkeley Mono Bold
 
 # font_family       CommitMono
 # italic_font       CommitMono-Italic
