--- a/kitty/ariake.conf
+++ b/kitty/ariake.conf
@@ -6,7 +6,7 @@ selection_background  #fbfcfc
 
 # black
 color0 #2e323e
-color8 #2e323e
+color8 #504f84
 
 # red
 color1 #f5331d
@@ -46,5 +46,5 @@ active_tab_background   #546d79
 active_tab_font_style   bold
 
 inactive_tab_foreground #7ef1ea
-inactive_tab_background #222433
+inactive_tab_background #7f7ce3
 inactive_tab_font_style normal
