--- a/kitty/base.conf
+++ b/kitty/base.conf
@@ -88,7 +88,7 @@ bell_on_tab no
 
 macos_option_as_alt yes
 
-background_opacity 0.97
+# background_opacity 0.97
 dynamic_background_opacity yes
 hide_window_decorations yes
 
