--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -72,6 +72,7 @@ inner.horizontal = 10
 inner.vertical =   10
 outer.left =       10
 outer.bottom =     10
+# outer.top =        46
 outer.top =        10
 outer.right =      10
 
